--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,7 @@
 {
 	"hostRequirements": {
    		"cpus": 8,
-   		"memory": "8gb",
-   		"storage": "32gb"
+   		"memory": "8gb"
 	},
 	"name": "Miniconda (Python 3)",
 	"build": { 
